--- a/High_Capacity_Image_Steganography_on_CIFAR100.ipynb
+++ b/High_Capacity_Image_Steganography_on_CIFAR100.ipynb
@@ -5,7 +5,10 @@
     "colab": {
       "name": "High-Capacity-Image-Steganography-on-CIFAR100.ipynb",
       "provenance": [],
-      "collapsed_sections": []
+      "collapsed_sections": [],
+      "mount_file_id": "1TTDPERa02QJFRLyDTlawsF7tDUhZr2lu",
+      "authorship_tag": "ABX9TyPkPw+meXXnQVk8AxQ6C29U",
+      "include_colab_link": true
     },
     "kernelspec": {
       "name": "python3",
@@ -363,6 +366,16 @@
     }
   },
   "cells": [
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/MohammadRezaShfaie/High-Capacity-Image-Steganography-using-FC-DenseNet/blob/main/High_Capacity_Image_Steganography_on_CIFAR100.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
     {
       "cell_type": "code",
       "execution_count": null,
